# ctest

./: .gitignore  CMakeLists.txt  run.bat
source/: main.cpp
source/utility/: testmath.cpp  testmath.h
